--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "nitro": "^0.0.0",
     "otp-generator": "^4.0.1",
     "prisma": "^5.22.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz"
   }
 }
